syntax = "proto3";

option java_multiple_files = true;
option java_package = "src.main.proto";
option java_outer_classname = "DataStreamerProto";


service DataStreamer {

  rpc StreamData(StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
  string data = 1;
}

message StreamResponse {
  string message = 1;
}
